--- a/YesDay/Views/Couple/Overview.cshtml
+++ b/YesDay/Views/Couple/Overview.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <a asp-controller="Couple" asp-action="budget">
+            <a asp-controller="Couple" asp-action="Expense">
                 <img src="~/Images/budget.png" alt="Budget" style="width:75px;height:75px;" />
             </a>
         </div>
