--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -27,7 +27,7 @@
                         <li><a asp-controller="couple" asp-action="vendor">Leverantörer</a></li>
                         <li><a asp-controller="couple" asp-action="expense">Budget</a></li>
                         <li><a asp-controller="couple" asp-action="settings">Inställningar</a></li>
-                        <li><a asp-controller="public" asp-action="logout">Logga ut</a></li>
+                        <li><a asp-controller="couple" asp-action="Logout">Logga ut</a></li>
                     </ul>
                 </nav>
                 <script>
