--- a/YesDay/Views/Public/Index.cshtml
+++ b/YesDay/Views/Public/Index.cshtml
@@ -1,39 +1,33 @@
-﻿<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="~/Images/FlowerRings.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First</h5>
-                <p>lite text</p>
+﻿<div class="col-centered">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/Images/FlowerRings.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Planera ditt drömbröllop med YesDay!</h3>
+                </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="~/Images/bouquet-691862_1920.jpg" alt="Second slide">
+                <img class="d-block w-100" src="~/Images/TableTopBrownCups.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second</h5>
-                    <p>...</p>
+                    <h5>All information på ett och samma ställe!</h5>
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="~/Images/RaiseGlassDinner.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
+
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Images/RaiseGlassDinner.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Luta dig tillbaka och njut av till bröllop!</h3>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </div>
-
