--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -6,40 +6,93 @@
 
 <br />
 <form asp-controller="Couple" asp-action="AddGuest" method="post">
-    <div>
-        <p class="obligatorisk">(* = Obligatoriska fält)</p>
-
-        <label asp-for="Firstname"></label>
-        <input asp-for="Firstname" />
-        <span asp-validation-for="Firstname"></span>
-        <br />
-        <label asp-for="Lastname"></label>
-        <input asp-for="Lastname" />
-        <span asp-validation-for="Lastname"></span>
-        <br />
-        <label asp-for="Address"></label>
-        <input asp-for="Address" />
-        <br />
-        <label asp-for="Email"></label>
-        <input asp-for="Email" />
-        <span asp-validation-for="Email"></span>
-        <br />
-        <label asp-for="InvitedBy"></label>
-        <input asp-for="InvitedBy" />
-        <br />
-        <label asp-for="GuestTitle"></label>
-        <input asp-for="GuestTitle" />
-        <br />
-        <label asp-for="WeddingCrewTitle"></label>
-        <input asp-for="WeddingCrewTitle" />
-        <br />
-        <label asp-for="GuestNote"></label>
-        <textarea asp-for="GuestNote" rows="10"></textarea>
+    <p class="obligatorisk">(* = Obligatoriska fält)</p>
+    <div class="row">
+        <div class="col-3">
+            <label asp-for="Firstname"></label>
+        </div>
+        <div class="col-3">
+            <input asp-for="Firstname" />
+            <span asp-validation-for="Firstname"></span>
+        </div>
     </div>
-    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng"/>
-    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
+    <div class="row">
+        <div class="col-3">
+            <label asp-for="Lastname"></label>
+        </div>
+        <div class="col-3">
+            <input asp-for="Lastname" />
+            <span asp-validation-for="Lastname"></span>
+        </div>
+    </div>
+    <div class="row">
 
-    <br /><br />
-    <a href="/Couple/GuestList">Avbryt</a>
+        <div class="col-3">
+            <label asp-for="Address"></label>
+        </div>
+        <div class="col-3">
+            <input asp-for="Address" />
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col-3">
+            <label asp-for="Email"></label>
+
+        </div>
+        <div class="col-3">
+            <input asp-for="Email" />
+            <span asp-validation-for="Email"></span>
+        </div>
+
+    </div>
+    <div class="row">
+
+        <div class="col-3">
+            <label asp-for="InvitedBy"></label>
+
+        </div>
+        <div class="col-3">
+            <input asp-for="InvitedBy" />
+        </div>
+
+    </div>
+    <div class="row">
+
+        <div class="col-3">
+            <label asp-for="GuestTitle"></label>
+        </div>
+        <div class="col-3">
+            <input asp-for="GuestTitle" />
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col-3">
+            <label asp-for="WeddingCrewTitle"></label>
+
+        </div>
+        <div class="col-3">
+            <input asp-for="WeddingCrewTitle" />
+        </div>
+
+    </div>
+    <div class="row">
+
+        <div class="col-3">
+            <label asp-for="GuestNote"></label>
+
+        </div>
+        <div class="col-3">
+            <textarea asp-for="GuestNote" rows="8"></textarea>
+        </div>
+
+    </div>
+
+    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
+    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
 </form>
+<a asp-controller="Couple" asp-action="Guestlist">Avbryt</a>
+
+
 
