--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -80,6 +80,17 @@
     <div class="row">
 
         <div class="col-3">
+            <label asp-for="GuestStatus"></label>
+
+        </div>
+        <div class="col-3">
+            <select asp-for="SelectedRsvp" asp-items="Model.GuestStatus" />
+        </div>
+
+    </div>
+    <div class="row">
+
+        <div class="col-3">
             <label asp-for="GuestNote"></label>
 
         </div>
@@ -88,9 +99,12 @@
         </div>
 
     </div>
-
-    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
-    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
+    <div class="row">
+        <div class="col-6">
+            <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
+            <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
+        </div>
+    </div>
 </form>
 <a asp-controller="Couple" asp-action="Guestlist">Avbryt</a>
 
