--- a/YesDay/Views/Public/Login.cshtml
+++ b/YesDay/Views/Public/Login.cshtml
@@ -22,7 +22,7 @@
     </div>
 
 
-    <input class="button" type="submit" value="Logga in" />
+    <input class="btn btn-light" type="submit" value="Logga in" />
 
 </form>
 
