--- a/YesDay/Views/Couple/UpdateGuest.cshtml
+++ b/YesDay/Views/Couple/UpdateGuest.cshtml
@@ -84,7 +84,7 @@
 
         </div>
         <div class="col-3">
-            <select asp-for="SelectedRsvp" asp-items="Model.GuestStatus" />
+            <select asp-for="SelectedRsvp" asp-items="Model.GuestStatus"> </select>
         </div>
 
     </div>
