--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -68,13 +68,13 @@
             </div>
         </div>
         <div class="row">
-           <div class="col"></div>
+           @*<div class="col"></div>*@
             <div class="col-10">
             <div>
                 @RenderBody()
             </div>
             </div>
-            <div class="col"></div>
+            @*<div class="col"></div>*@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
