--- a/YesDay/Views/Couple/AddTask.cshtml
+++ b/YesDay/Views/Couple/AddTask.cshtml
@@ -3,7 +3,11 @@
     ViewData["Title"] = "YesDay - Uppgift";
 }
 
-<h2>Lägga till uppgift</h2>
+<div id="header" class="row">
+    <div class="col">
+        <h2>Lägg till en uppgift</h2>
+    </div>
+</div>
 
 <form asp-controller="Couple" asp-action="AddTask" method="post">
     <div>
