--- a/YesDay/Views/Couple/AddVendor.cshtml
+++ b/YesDay/Views/Couple/AddVendor.cshtml
@@ -4,9 +4,9 @@
 }
 
 <div class="container">
-    <div class="row">
+    <div id="header" class="row">
         <div class="col">
-            <h3>Leverantörstjänster</h3>
+            <h2>Lägg till leverantör</h2>
         </div>
     </div>
     <form asp-controller="Couple" asp-action="AddVendor" method="post">
