--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "YesDay - Gästlista";
 }
 <div class="container">
-    <div class="row" style="padding-top:35px;">
+    <div id="header" class="row">
         <div class="col">
-            <h3>Gästlista</h3>
+            <h2>Gästlista</h2>
         </div>
     </div>
     <div class="row">
