--- a/YesDay/Views/Couple/Overview.cshtml
+++ b/YesDay/Views/Couple/Overview.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoupleOverviewVM
 
 <div class="container">
-    <div class="row" style="padding-top:50px;padding-bottom:50px">
+    <div id="overviewheader" class="row">
         <h3>Välkomna @Model.FirstName1 och @Model.FirstName2 !</h3>
     </div>
     <div class="row">
