--- a/YesDay/Views/Couple/Settings.cshtml
+++ b/YesDay/Views/Couple/Settings.cshtml
@@ -1,6 +1,10 @@
 ﻿@model CoupleSettingVM
 
-
+<div id="header" class="row">
+    <div class="col">
+        <h2>Inställningar</h2>
+    </div>
+</div>
 <form asp-controller="couple" asp-action="settings">
 
     @*<label asp-for="Password"></label>
