--- a/YesDay/Views/Couple/UpdateExpense.cshtml
+++ b/YesDay/Views/Couple/UpdateExpense.cshtml
@@ -3,7 +3,11 @@
     ViewData["Title"] = "YesDay - Budget";
 }
 
-<h3>Uppdatera Budget</h3>
+<div id="header" class="row">
+    <div class="col">
+        <h2>Uppdatera budget</h2>
+    </div>
+</div>
 
 
 <form asp-controller="Couple" asp-action="UpdateExpense" method="post">
