--- a/YesDay/Views/Couple/UpdateVendor.cshtml
+++ b/YesDay/Views/Couple/UpdateVendor.cshtml
@@ -2,8 +2,11 @@
 @{
     ViewData["Title"] = "Uppdatera Leverantör";
 }
-
-<h3 style="font-family: 'Lobster', cursive;">Uppdatera leverantör</h3>
+<div id="header" class="row">
+    <div class="col">
+        <h2>Uppdatera leverantör</h2>
+    </div>
+</div>
 
 <form asp-controller="Couple" asp-action="UpdateVendor" method="post">
     <div>
