--- a/YesDay/Views/Couple/Vendor.cshtml
+++ b/YesDay/Views/Couple/Vendor.cshtml
@@ -4,9 +4,9 @@
 }
 
 <div class="container">
-    <div class="row" style="padding-top:35px;">
+    <div id="header" class="row">
         <div class="col">
-            <h3 style="font-family: 'Lobster', cursive;">Leverantörer</h3><br />
+            <h2>Leverantörer</h2>
         </div>
     </div>
     <div class="row">
