--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="~/StyleSheet.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
 </head>
 <body>
     <div class="container" style="width:100%">
@@ -61,7 +61,7 @@
             <div class="col" style="margin-top:10px;">
                 <form>
                     <div class="form-group">
-                        <input class="btn btn-light" style="color:#9Fb8Bf" type="submit" asp-controller="Couple" asp-action="Logout" value="Logga ut" />
+                        <input class="btn btn-light" type="submit" asp-controller="Couple" asp-action="Logout" value="Logga ut" />
                     </div>
                 </form>
 
@@ -77,6 +77,7 @@
             @*<div class="col"></div>*@
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
