--- a/YesDay/Views/Couple/Expense.cshtml
+++ b/YesDay/Views/Couple/Expense.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewData["Title"] = "Expense";
 }
+<div id="header" class="row">
+    <div class="col">
+        <h2>Budget</h2>
+    </div>
+</div>
 <div class="container">
 
     <div class="row">
