--- a/YesDay/Views/Public/Login.cshtml
+++ b/YesDay/Views/Public/Login.cshtml
@@ -1,28 +1,34 @@
 ﻿@model PublicLogInVM
 
-<form asp-controller="Public" asp-action="Login">
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="UserName"></label>
-        </div>
-        <div class="col-3">
-            <input asp-for="UserName" />
-            <span asp-validation-for="UserName"></span>
+    <div id="header" class="row">
+        <div class="col">
+            <h2>Logga in</h2>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="Password"></label>
+    <form asp-controller="Public" asp-action="Login">
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="UserName"></label>
+            </div>
+            <div class="col-3">
+                <input asp-for="UserName" />
+                <span asp-validation-for="UserName"></span>
+            </div>
         </div>
-        <div class="col-3">
-            <input asp-for="Password" />
-            <span asp-validation-for="Password"></span>
+
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="Password"></label>
+            </div>
+            <div class="col-3">
+                <input asp-for="Password" />
+                <span asp-validation-for="Password"></span>
+            </div>
         </div>
-    </div>
 
 
-    <input class="btn btn-light" type="submit" value="Logga in" />
+        <input class="btn btn-light" type="submit" value="Logga in" />
 
-</form>
+    </form>
 
