--- a/YesDay/Views/Public/Signup.cshtml
+++ b/YesDay/Views/Public/Signup.cshtml
@@ -1,61 +1,67 @@
 ﻿@model PublicSignUpVM
 
-<form asp-controller="Public" asp-action="signup">
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="Email"></label>
 
-        </div>
-        <div class="col-3">
-            <input asp-for="Email" />
-            <span asp-validation-for="Email"></span>
-
+    <div id="header" class="row">
+        <div class="col">
+            <h2>Registrera användare</h2>
         </div>
     </div>
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="Password"></label>
+    <form asp-controller="Public" asp-action="signup">
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="Email"></label>
 
+            </div>
+            <div class="col-3">
+                <input asp-for="Email" />
+                <span asp-validation-for="Email"></span>
+
+            </div>
         </div>
-        <div class="col-3">
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="Password"></label>
 
-            <input asp-for="Password" />
-            <span asp-validation-for="Password"></span>
+            </div>
+            <div class="col-3">
+
+                <input asp-for="Password" />
+                <span asp-validation-for="Password"></span>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
+        <div class="row">
+            <div class="col-3">
 
-            <label asp-for="FirstName1"></label>
+                <label asp-for="FirstName1"></label>
+            </div>
+            <div class="col-3">
+
+                <input asp-for="FirstName1" />
+                <span asp-validation-for="FirstName1"></span>
+
+            </div>
         </div>
-        <div class="col-3">
-
-            <input asp-for="FirstName1" />
-            <span asp-validation-for="FirstName1"></span>
-
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="FirstName2"></label>
+            </div>
+            <div class="col-3">
+                <input asp-for="FirstName2" />
+                <span asp-validation-for="FirstName2"></span>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="FirstName2"></label>
+        <div class="row">
+            <div class="col-3">
+                <label asp-for="WeddingDate"></label>
+            </div>
+            <div class="col-3">
+                <input asp-for="WeddingDate" />
+                <span asp-validation-for="WeddingDate"></span>
+            </div>
         </div>
-        <div class="col-3">
-            <input asp-for="FirstName2" />
-            <span asp-validation-for="FirstName2"></span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <label asp-for="WeddingDate"></label>
-        </div>
-        <div class="col-3">
-            <input asp-for="WeddingDate" />
-            <span asp-validation-for="WeddingDate"></span>
-        </div>
-    </div>
 
 
 
 
-    <input class="btn btn-light" type="submit" value="Registrera par" />
-</form>
+        <input class="btn btn-light" type="submit" value="Registrera par" />
+    </form>
